// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> component onBlur event should render error message when date is below min 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-0 i {
  color: #838383;
}

.emotion-0:has(input[disabled]) i,
.emotion-0:has(input[disabled]) label>span {
  color: #C1C1C1;
}

.emotion-0:has(input[readonly]:not(input[disabled])) label,
.emotion-0:has(input[readonly]:not(input[disabled])) label>span {
  color: #838383;
}

.emotion-2 {
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF494A;
  cursor: inherit;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  left: 16px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  background-color: #FFFFFF;
  border-radius: 0px;
  border-style: solid;
  outline: 0;
  border-width: 1px;
  border-color: #C1C1C1;
  min-width: 198px;
  padding: 24px 16px 8px;
  width: 100%;
  height: 53px;
}

.emotion-6:focus {
  border-color: #00677F;
}

.emotion-6[data-error="true"] {
  border-color: #FF494A;
}

.emotion-6[data-error="true"]:focus {
  border-color: #FF494A;
}

.emotion-6[readonly]:not([disabled]) {
  background-color: #F3F3F5;
  color: #838383;
}

.emotion-6:disabled {
  color: #C1C1C1;
  background-color: #FAFAFA;
  border-color: #DEDEDE;
  cursor: not-allowed;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:disabled::-moz-placeholder {
  color: transparent;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:disabled::placeholder {
  color: transparent;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-8 {
  padding-left: 16px;
}

.emotion-10 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF494A;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="Choose-a-date"
    >
      Choose a date
    </label>
    <div
      class="emotion-4 emotion-5"
      style="flex-direction: row;"
    >
      <input
        class="emotion-6 emotion-7"
        data-error="true"
        id="Choose-a-date"
        min="2023-03-30"
        name="Choose-a-date"
        type="date"
        value="2023-02-01"
      />
    </div>
    <div
      class="emotion-8 emotion-9"
    >
      <span
        class="emotion-10 emotion-11"
        color="error.default"
        data-testid="typography"
      >
        Please enter a valid date
      </span>
    </div>
  </div>
</div>
`;

exports[`<DatePicker /> component onBlur event should render error message when date is higher than max 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-0 i {
  color: #838383;
}

.emotion-0:has(input[disabled]) i,
.emotion-0:has(input[disabled]) label>span {
  color: #C1C1C1;
}

.emotion-0:has(input[readonly]:not(input[disabled])) label,
.emotion-0:has(input[readonly]:not(input[disabled])) label>span {
  color: #838383;
}

.emotion-2 {
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF494A;
  cursor: inherit;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  left: 16px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  background-color: #FFFFFF;
  border-radius: 0px;
  border-style: solid;
  outline: 0;
  border-width: 1px;
  border-color: #C1C1C1;
  min-width: 198px;
  padding: 24px 16px 8px;
  width: 100%;
  height: 53px;
}

.emotion-6:focus {
  border-color: #00677F;
}

.emotion-6[data-error="true"] {
  border-color: #FF494A;
}

.emotion-6[data-error="true"]:focus {
  border-color: #FF494A;
}

.emotion-6[readonly]:not([disabled]) {
  background-color: #F3F3F5;
  color: #838383;
}

.emotion-6:disabled {
  color: #C1C1C1;
  background-color: #FAFAFA;
  border-color: #DEDEDE;
  cursor: not-allowed;
}

.emotion-6:disabled::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:disabled::-moz-placeholder {
  color: transparent;
}

.emotion-6:disabled:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:disabled::placeholder {
  color: transparent;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-8 {
  padding-left: 16px;
}

.emotion-10 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF494A;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="Choose-a-date"
    >
      Choose a date
    </label>
    <div
      class="emotion-4 emotion-5"
      style="flex-direction: row;"
    >
      <input
        class="emotion-6 emotion-7"
        data-error="true"
        id="Choose-a-date"
        max="2025-03-30"
        name="Choose-a-date"
        type="date"
        value="2026-02-01"
      />
    </div>
    <div
      class="emotion-8 emotion-9"
    >
      <span
        class="emotion-10 emotion-11"
        color="error.default"
        data-testid="typography"
      >
        Please enter a valid date
      </span>
    </div>
  </div>
</div>
`;

exports[`<DatePicker /> component should render date input correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  width: 100%;
  position: relative;
}

.emotion-0 i {
  color: #838383;
}

.emotion-0:has(input[disabled]) i,
.emotion-0:has(input[disabled]) label>span {
  color: #C1C1C1;
}

.emotion-0:has(input[readonly]:not(input[disabled])) label,
.emotion-0:has(input[readonly]:not(input[disabled])) label>span {
  color: #838383;
}

.emotion-2 {
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #838383;
  cursor: inherit;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  left: 16px;
  top: 16px;
  position: absolute;
  -webkit-transform: translateY(-45%);
  -moz-transform: translateY(-45%);
  -ms-transform: translateY(-45%);
  transform: translateY(-45%);
  -webkit-transition: -webkit-transform 150ms ease-out,font-size 150ms ease-out;
  transition: transform 150ms ease-out,font-size 150ms ease-out;
}

.emotion-4 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #FF494A;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  background-color: #FFFFFF;
  border-radius: 0px;
  border-style: solid;
  outline: 0;
  border-width: 1px;
  border-color: #C1C1C1;
  min-width: 198px;
  padding: 24px 16px 8px;
  width: 100%;
  height: 53px;
}

.emotion-8:focus {
  border-color: #00677F;
}

.emotion-8[data-error="true"] {
  border-color: #FF494A;
}

.emotion-8[data-error="true"]:focus {
  border-color: #FF494A;
}

.emotion-8[readonly]:not([disabled]) {
  background-color: #F3F3F5;
  color: #838383;
}

.emotion-8:disabled {
  color: #C1C1C1;
  background-color: #FAFAFA;
  border-color: #DEDEDE;
  cursor: not-allowed;
}

.emotion-8:disabled::-webkit-input-placeholder {
  color: transparent;
}

.emotion-8:disabled::-moz-placeholder {
  color: transparent;
}

.emotion-8:disabled:-ms-input-placeholder {
  color: transparent;
}

.emotion-8:disabled::placeholder {
  color: transparent;
}

.emotion-8::-webkit-input-placeholder {
  color: transparent;
}

.emotion-8::-moz-placeholder {
  color: transparent;
}

.emotion-8:-ms-input-placeholder {
  color: transparent;
}

.emotion-8::placeholder {
  color: transparent;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <label
      class="emotion-2 emotion-3"
      data-testid="label-field"
      for="Choose-a-date"
    >
      Choose a date
      <span
        class="emotion-4 emotion-5"
        color="error.default"
        data-testid="typography"
      >
        *
      </span>
    </label>
    <div
      class="emotion-6 emotion-7"
      style="flex-direction: row;"
    >
      <input
        class="emotion-8 emotion-9"
        data-error="false"
        id="Choose-a-date"
        max="2025-03-30"
        min="2023-03-30"
        name="Choose-a-date"
        type="date"
        value=""
      />
    </div>
  </div>
</div>
`;
